force-app/main/default/objects/acn_ttn__OrgStorage__c/acn_ttn__OrgStorage__c.object-meta.xml
<CustomObject>
    <label>OrgStorage</label>
    <nameField>
        <label>OrgStorage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgStorages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>