force-app/main/default/objects/acn_ttn__OrgStorage__c/fields/acn_ttn__No_of_Lookup_Fields__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__No_of_Lookup_Fields__c</fullName>
    <label>No of Lookup Fields</label>
    <length>10</length>
    <type>Text</type>
</CustomField>