force-app/main/default/objects/acn_ttn__OrgStorage__c/fields/acn_ttn__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>