force-app/main/default/objects/acn_ttn__OrgStorage__c/fields/acn_ttn__Percentage_Utilization__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Percentage_Utilization__c</fullName>
    <label>Percentage Utilization</label>
    <length>10</length>
    <type>Text</type>
</CustomField>