force-app/main/default/objects/acn_ttn__OrgStorage__c/recordTypes/acn_ttn__tstbbn.recordType-meta.xml
<RecordType>
    <fullName>acn_ttn__tstbbn</fullName>
    <active>true</active>
    <label>tstbbn</label>
</RecordType>