force-app/main/default/objects/acn_ttn__OrgStorage__c/listViews/acn_ttn__All.listView-meta.xml
<ListView>
    <fullName>acn_ttn__All</fullName>
    <columns>NAME</columns>
    <columns>acn_ttn__Field_Details__c</columns>
    <columns>acn_ttn__Is_Standard_Field__c</columns>
    <columns>acn_ttn__Number_of_Fields__c</columns>
    <columns>acn_ttn__Number_of_Records__c</columns>
    <columns>acn_ttn__ObjectName__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>